# vim-haskell-syntax

./: LICENSE  vim-haskell-syntax-tester.cabal
meta/: Notes.txt
syntax/: haskell.vim
test/: Main.hs  multiline-module1.hs  multiline-module2.hs
test/golden/: .gitignore  let-binding-badequals.hs  let-binding.hs  let-binding.hs.gold.html  let-decl-badequals.hs.gold.html  let-decl.hs  let-decl.hs.gold.html  module-firstline.hs  module-firstline.hs.gold.html  module-heirarchy.hs  module-heirarchy.hs.gold.html  module-noexport.hs  module-noexport.hs.gold.html  module-skipped-lines.hs  module-skipped-lines.hs.gold.html  module.hs.gold.html  multiline-module1.hs.gold.html  multiline-module2.hs  multiline-module2.hs.gold.html  nested-decl-badequals.hs  nested-decl-badequals.hs.gold.html  toplevel-arg.hs  toplevel-badequals.hs  toplevel-expr.hs.gold.html  toplevel-infix-backtick.hs  toplevel-infix-punct.hs.gold.html  toplevel-multiline.hs  toplevel-multiline.hs.gold.html  toplevel-notassignment.hs.gold.html  toplevel-punct.hs  toplevel.hs.gold.html  where-decl-badequals.hs  where-decl.hs  where-decl.hs.gold.html
test/golden/nested/: let-decl-badequals.hs  let-decl-badequals.hs.gold.html  nested-lets.hs  nested-lets.hs.gold.html  pre-let-code.hs  pre-let-code.hs.gold.html  where-decl-badequals.hs.gold.html  where-decl.hs.gold.html
test/golden/toplevel/: arg.hs.gold.html  backticks-after-eq.hs  backticks-after-eq.hs.gold.html  backticks-with-ctor.hs  backticks-with-ctor.hs.gold.html  badequals.hs.gold.html  ctor-arg-with-empty-brackets.hs  ctor-arg-with-empty-brackets.hs.gold.html  data.hs  guarded.hs  infix-backtick.hs.gold.html  infix-punct.hs  pattern-match.hs  pattern-match.hs.gold.html  punct.hs.gold.html  toplevel.hs.gold.html  (+2 more)
test/runner/: Html.hs  Main.hs  Types.hs  test-highlight.vim  to-html.vim
(+1 files in other folders)
